Closes #44: Added support for Java 8